--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "10.15.0",
+    "mui-tel-input": "^4.0.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
